terraform/vpc.tf
# ------------------------------
# VPC
# ------------------------------
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "${var.project_name}-vpc"
  }
}

# ------------------------------
# Internet Gateway
# ------------------------------
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = { 
    Name = "${var.project_name}-igw" 
  }
}

# ------------------------------
# Get all availability zones in the region
# ------------------------------

  data "aws_availability_zones" "available" {}


# ------------------------------
# Public Subnets
# ------------------------------
resource "aws_subnet" "public" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = element(data.aws_availability_zones.available.names, count.index)
  map_public_ip_on_launch = true              
  
  tags = {
    Name = "${var.project_name}-public-${count.index}"
  }
}


# ------------------------------
# Route Table for Public Subnets
# ------------------------------
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "${var.project_name}-public-rt"
  }
}


# ------------------------------
# Associate Route Table with Each Subnet
# ------------------------------
resource "aws_route_table_association" "public" {
  count          = length(var.public_subnet_cidrs)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
